# udify

./: .gitignore  predict.py  pyproject.toml
udify/dataset_readers/: sigmorphon_2019_task_2.py  universal_dependencies.py
udify/modules/: bert_pretrained.py
